plugins {
    `java-library`
    jacoco
    application
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}

tasks.withType<JavaCompile> {
    options.encoding = "UTF-8"
    options.compilerArgs.add("-parameters")
}

tasks.test {
    useJUnitPlatform()
    finalizedBy(tasks.jacocoTestReport)
}

application {
    mainClass.set("com.example.kore.spring.Application")
    applicationDefaultJvmArgs = listOf("-Dspring.profiles.active=localhost")
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    val springBootVersion: String by project
    val testcontainersVersion: String by project
    val springdocOpenAPIVersion: String by project

    implementation(platform("org.springframework.boot:spring-boot-dependencies:$springBootVersion"))
    implementation("org.springframework.boot:spring-boot-starter-web")
    implementation("org.springframework.boot:spring-boot-starter-validation")
    implementation("org.springframework.boot:spring-boot-starter-data-mongodb")
    implementation("com.fasterxml.jackson.module:jackson-module-parameter-names")
    implementation("org.springdoc:springdoc-openapi-ui:$springdocOpenAPIVersion")

    testImplementation(platform("org.testcontainers:testcontainers-bom:$testcontainersVersion"))
    testImplementation("org.testcontainers:junit-jupiter")
    testImplementation("org.testcontainers:mongodb")
    testImplementation("org.springframework.boot:spring-boot-starter-test")
}
